[project]
name = "geopandas-dataviz"
version = "0.1.0"
description = ""
authors = [
    {name = "Manoel Castro",email = "manoelcastro.nt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "osmnx (>=2.0.5,<3.0.0)",
    "contextily (>=1.6.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "geopandas_dataviz", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
